# PetProject

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
main/: admin.py  celery.py  models.py  serializers.py  settings.py  tasks.py  urls.py  views.py
main/migrations/: 0001_initial.py
main/scripts/: populate_chroma.py
main/services/: answer_service.py  neuron_model_service.py  search_service.py  text_chunker.py  vector_storage.py  wiki_extractor.py
telegram_bot/: apps.py  bot.py  messages.py
telegram_bot/handlers/: api_messager.py  start.py
telegram_bot/management/commands/: start_telegram_bot.py
telegram_bot/services/: neuron_model_service.py
